; ModuleID = '/home/carl/AnghaBench/http-parser/extr_test.c_response_status_cb.c'
source_filename = "/home/carl/AnghaBench/http-parser/extr_test.c_response_status_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@parser = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@messages = common dso_local global %struct.TYPE_2__* null, align 8
@num_messages = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @response_status_cb(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp eq i32* %7, @parser
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load i32, i32* @TRUE, align 4
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @messages, align 8
  %13 = load i64, i64* @num_messages, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  store i32 %11, i32* %15, align 4
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @messages, align 8
  %17 = load i64, i64* @num_messages, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i8*, i8** %5, align 8
  %22 = load i64, i64* %6, align 8
  %23 = call i32 @strlncat(i32 %20, i32 4, i8* %21, i64 %22)
  ret i32 0
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @strlncat(i32, i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
